# file-shover

./: Cargo.toml  Makefile  README.md
benches/: request_speed.rs
src/: data.rs  files.rs  lib.rs  main.rs  message.rs
test-sites/multi-page-site/: about.html  index.html
test-sites/multi-page-site/subdir/: nested.html
test-sites/simple-portfolio/: index.html  style.css
