[package]
name = "file-shover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11"
log = "0.4.27"
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[[bench]]
name = "request_speed"
harness = false
